--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "extra": "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY: process.env.EXPO_PUBLIC_CLERK_PUBLISHABLE_K",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
