--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.14.3",
     "@expo/metro-runtime": "~5.0.4",
+    "dotenv": "^17.2.0",
     "expo": "~53.0.17",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
     "expo-module-scripts": "^4.1.9",
     "expo-router": "~5.1.3",
+    "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -23,6 +26,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
